hphp/hack/test/typecheck/trait_priv_extends3.php.exp
WARN: File "trait_priv_extends3.php", line 11, characters 7-7:
Duplicated property `c` in `C` (defined in `C` and `T`): all instances will be aliased at runtime (Warn[12008])
ERROR: File "trait_priv_extends3.php", line 14, characters 11-13:
The property `c` has the wrong type (Typing[4341])
  File "trait_priv_extends3.php", line 14, characters 11-13:
  Typing error
  File "trait_priv_extends3.php", line 8, characters 12-13:
  Expected `C1`
  File "trait_priv_extends3.php", line 14, characters 12-13:
  But got `C2`
ERROR: File "trait_priv_extends3.php", line 14, characters 11-13:
The property `c` has the wrong type (Typing[4341])
  File "trait_priv_extends3.php", line 14, characters 11-13:
  Typing error
  File "trait_priv_extends3.php", line 14, characters 12-13:
  Expected `C2`
  File "trait_priv_extends3.php", line 8, characters 12-13:
  But got `C1`
